--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 CHANGES
 
-0.9.10
+1.0.0
+
+- Added lein version command
+- Include project.clj in tar (makes it easier to debug or play with the lemur code itself)
+- Option to set availability-zone
+
+0.9.10-SNAPSHOT
 
 - Clj 1.3 bug in com.climate.services.aws.emr
 
