--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,7 +3,7 @@ CHANGES
 1.1.1
 
  - Bugfix: :ami-version default should only be set in base.clj, not the command line defaults,
-   otherwise it is not overridable in a probject specifc base file.
+   otherwise it is not overridable in a project specific base file.
 
 1.1.0
 
