--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,11 @@
 CHANGES
 
+1.3.0
+
+- Allow explicit action-on-failure setting for defstep
+
+- New submit command to add a step to a running jobflow
+
 1.2.0
 
 - s3/cp now supports S3 directory to S3 directory copies
