--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,10 @@
 CHANGES
 
+1.2.1
+
+- set the VisibleToAllUsers flag on all jobflows
+- update to version 1.3.24 of the Amazon SDK for Java
+
 1.2.0
 
 - s3/cp now supports S3 directory to S3 directory copies
