--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,9 @@
 CHANGES
 
+1.3.1
+
+- Include CHANGES.txt and LICENSE in the tarball distribution
+
 1.3.0
 
 - Allow explicit action-on-failure setting for defstep
