--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,10 @@
 CHANGES
 
+1.4.0
+
+- Project depends on Clojure version 1.5.1
+- Optional profiles can be enabled to use Clojure version 1.3 or 1.4
+
 1.3.1
 
 - Include CHANGES.txt and LICENSE in the tarball distribution
