--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,9 @@
 CHANGES
 
+1.4.2
+
+- Hadoop streaming and step-jar selection enabled in local mode
+
 1.4.1
 
 - Project depends on aws-java-sdk 1.8.4
